# GitHub

./: .editorconfig  .envrc  .gitignore  .markdownlint.yaml  .yamllint.yaml  README.md  devenv.nix  flake.nix  justfile  result  treefmt.toml
.github/: dependabot.yml  dependency-updates.yml
.github/ISSUE_TEMPLATE/: bug_report.md  ci-failure.md  feature_request.md
.github/workflows/: build-matrix.yml  build.yml  cache-management.yml  ci.yml  ci.yml.oldone  claude-code-test.yml  codeql.yml  dependencies.yml  dependency-updates.yml  deploy.yml  development.yml  nix-action-example.yml  nix-update.yml  release.yml  scorecards.yml  security-audit.yml  security.yml  systems-tests.yml  update-dependencies.yml
.jj/repo/: config.toml
docs/: DEVELOPMENT.md  bootloader-cleanup.md  cache-setup.md  caelestia-quickshell.md  devenv.md  jujutsu_integration.md  quickshell.md  themes.md  waybar.md  workflows.md
docs/ci/: nix-github-actions-fix.md
docs/devenv/: claude-code.md
examples/astronaut-theme/: README.md  configuration.nix
examples/enhanced-waybar/: README.md  configuration.nix
examples/julia/: .envrc
examples/python/: .envrc  pyproject.toml
examples/rust/: .envrc
hooks/: protect-secrets.sh  run-tests.sh
modules/: README.md  common.nix  config-example.nix
nixos/: common.nix
parts/: fmt.nix
pkgs/: default.nix
scripts/: cache-manager.sh  init-secrets.sh  install-blazar.sh  print-tree.sh  update-deps.sh
secrets/: secrets.yaml
systems/: default.nix
templates/: claude-global-config.md
tests/: test_cache_setup.py  test_justfile_jj.py
(+112 files in other folders)
